#bin_SCRIPTS = control.cgi create_account.cgi directory.cgi gcontrol.cgi gdirectory.cgi glisting.cgi listing.cgi lodn_accounts.cgi lodn_augment.cgi lodn_browser.cgi lodn_create.cgi lodn_delete.cgi lodn_file_status.cgi lodn_genjnlp.cgi lodn_genjnlp_osx.cgi lodn_genurl.cgi lodn_getro.cgi lodn_getxnd.cgi lodn_publish.cgi lodn_published.cgi lodn_readme.cgi lodn_rename_directory.cgi lodn_rename_exnode.cgi lodn_unpublish.cgi lodn_upjnlp.cgi lodn_upjnlp_osx.cgi lodn_upload.cgi lodn_user_delete.cgi lodn_view.cgi lodn_warmer_control.cgi lodn_warmer_depots.cgi lodn_xnd_download.cgi lodn_xnd_upload.cgi login.cgi logout.cgi warmer_info.cgi

lodndir    = @LODN_WEB@/cgi-bin

dist_lodn_SCRIPTS = control.cgi create_account.cgi directory.cgi gcontrol.cgi gdirectory.cgi glisting.cgi listing.cgi lodn_accounts.cgi lodn_augment.cgi lodn_browser.cgi lodn_create.cgi lodn_delete.cgi lodn_file_status.cgi lodn_genjnlp.cgi lodn_genjnlp_osx.cgi lodn_genurl.cgi lodn_getro.cgi lodn_getxnd.cgi lodn_publish.cgi lodn_published.cgi lodn_readme.cgi lodn_rename_directory.cgi lodn_rename_exnode.cgi lodn_unpublish.cgi lodn_upjnlp.cgi lodn_upjnlp_osx.cgi lodn_upload.cgi lodn_user_delete.cgi lodn_view.cgi lodn_warmer_control.cgi lodn_warmer_depots.cgi lodn_xnd_download.cgi lodn_xnd_upload.cgi login.cgi logout.cgi warmer_info.cgi

install-data-hook:
	chmod o-rx @LODN_WEB@/cgi-bin/*

clean:
	rm -rf *.cgi
