includedir=@prefix@/include/@PACKAGE@
include_HEADERS = lors_api.h lors_error.h lors_file.h lors_file_opts.h\
                    lors_internal.h lors_job.h lors_libe2e.h lors_misc.h\
                    lors_opts.h lors_util.h xndrc.h lors_resolution.h
pkgincludedir=@prefix@/include
pkginclude_HEADERS = lors.h
