dnl Process this file with autoconf to produce a configure script.
AC_INIT(README)
AM_INIT_AUTOMAKE(libexnode,0.6.5)

dnl Default install directory
AC_PREFIX_DEFAULT(`pwd`/local)


dnl Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB
AC_PROG_MAKE_SET

dnl Checks for libraries.
dnl AC_CHECK_LIB(xml2,xmlNewDocNode,,AC_MSG_ERROR(Can't find libxml2))
AC_CHECK_LIB(xml2,xmlNewDocNode,,AC_MSG_WARN(Can't find libxml2))

dnl Checks for header files.
AC_HEADER_STDC

dnl check and setup path of libxml2 package                                                                       
AC_ARG_WITH(libxml2,[  --with-libxml2=DIR      path to libxml2 [DIR/include]],
            [XMLDIR="$with_libxml2";
             XMLINC="-I\$(XMLDIR)/include/libxml2";
             XMLLIB="-L\$(XMLDIR)/lib -lm -lz"],
            [XMLDIR="/usr/local";
             XMLINC="-I\$(XMLDIR)/include/libxml2";
             XMLLIB="-L\$(XMLDIR)/lib -lm -lz"])

AC_SUBST(XMLDIR)
AC_SUBST(XMLINC)
AC_SUBST(XMLLIB)

dnl check and setup path of libjansson package                                                                    
AC_ARG_WITH(libjansson,[  --with-libjansson=path         path to libjansson[default=path]],
            [JANSSONDIR="$with_libjansson";
             JANSSONINC="-I\$(JANSSONDIR)/include";
             JANSSONLIB="-L\$(JANSSONDIR)/lib -ljansson"],
	    [JANSSONDIR= /usr/local;
             JANSSONINC="-I\$(JANSSONDIR)/include";
             JANSSONLIB="-L\$(JANSSONDIR)/lib -ljansson"])
	    
AC_SUBST(JANSSONDIR)
AC_SUBST(JANSSONINC)
AC_SUBST(JANSSONLIB)


AC_ARG_WITH(libfdr,[  --with-libfdr=DIR       path to libfdr [DIR/include]],
            [FDRDIR="$with_libfdr";
             FDRINC="-I\$(FDRDIR)/include";
             FDRLIB="-L\$(FDRDIR)/lib"],
            [FDRDIR="/usr/local";
             FDRINC="-I\$(FDRDIR)/include";
             FDRLIB="-L\$(FDRDIR)/lib"])

AC_SUBST(FDRDIR)
AC_SUBST(FDRINC)
AC_SUBST(FDRLIB)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_CHECK_FUNCS(strdup strtod strtoul)

AC_OUTPUT(Makefile src/Makefile include/Makefile)
