pkgdata_DATA = command.tcl lat_display.tcl pkill run.pl ldap_to_cfg.pl \
              newusa_55_-130_25_-60_.gif europe_70_-15_35_45_.gif \
              newworld_85_-180_-55_180_.gif na-eu-world_72_-132_15_30_.gif \
              usa_54_-148_15_-35_.gif
install-exec-local:
	mkdir -p @prefix@/share/@PACKAGE@
	cp -r BWidget-1.4.1 @prefix@/share/@PACKAGE@
